# hospital-directory-api

./: Dockerfile  README.md  pyproject.toml  requirements.txt
resources/: invalid_empty_name.csv  invalid_exceeds_limit.csv  invalid_missing_address.csv  partial_failure.csv  partial_failures_2.csv  single_hospital.csv  valid_hospitals.csv  valid_no_phone.csv
src/: bulk_processor.py  csv_utils.py  hospital_client.py  main.py  models.py  progress_store.py
src/hospital_bulk_api/: api.py  clients.py  csv.py  processing.py  schemas.py  store.py
tests/: conftest.py  test_clients.py  test_csv.py  test_integration.py  test_processing.py
