[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-directory-api"
version = "0.1.0"
description = "Hospital bulk processing API"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hospital_api*"]

